...

- (instancetype)init
{
    self = [super init];
    
    if (self) {
        _hotCityName = @[@"北京", @"广州", @"成都", @"深圳", @"杭州", @"武汉"];
        _allCities = [NSMutableArray array];
        _hotCities = [NSMutableArray array];
        _citiesByInitial = [NSMutableDictionary dictionary];
        
        [self initializeWithFile:@"citylist.json"];
    }
...
