...
        locationView.startButton.addTarget(self, action: #selector(self.startLocationTapped), for: .touchUpInside)
        locationView.endButton.addTarget(self, action: #selector(self.endLocationTapped), for: .touchUpInside)

        //
        confirmButton = UIButton(type: .custom)
        confirmButton.backgroundColor = UIColor(red: CGFloat(0.29), green: CGFloat(0.30), blue: CGFloat(0.35), alpha: CGFloat(1.00))
        confirmButton.setTitle("确认呼叫", for: .normal)
        confirmButton.frame = CGRect(x: CGFloat(0), y: CGFloat(0), width: CGFloat(view.bounds.size.width - kTableViewMargin * 2), height: CGFloat(kLocationButtonHeight))
        confirmButton.center = CGPoint(x: CGFloat(view.center.x), y: CGFloat(view.bounds.height - kLocationButtonHeight / 2.0 - kTableViewMargin))
        confirmButton.addTarget(self, action: #selector(self.confirmAction), for: .touchUpInside)
        view.addSubview(confirmButton)
        confirmButton.isHidden = true
    }
...
